--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -559,6 +559,8 @@
                     FontSize="18"
                     Foreground="White" />
                 <TextBox
+                    Style="{StaticResource Helpable}"
+                    Tag="Це дійсна частина числа. Введення символів окрім цифр заборонено!"
                     Name="ConstantRealText"
                     Grid.Column="0"
                     Width="73"
@@ -575,6 +577,8 @@
                     Text="{Binding Path=ConstantReal, Mode=TwoWay}"
                     TextWrapping="Wrap" Grid.ColumnSpan="2" />
                 <TextBox
+                    Style="{StaticResource Helpable}"
+                    Tag="Це уявна частина числа. Введення символів окрім цифр заборонено!"
                     Name="ConstantImaginaryText"
                     Grid.Column="1"
                     Width="73"
@@ -600,6 +604,8 @@
                     FontSize="18"
                     Foreground="White" />
                 <RadioButton
+                    Style="{StaticResource Helpable}"
+                    Tag="Вкажіть степінь 3 або 4."
                     Name="FractalPower3Radio"
                     Grid.Column="0"
                     Width="12"
@@ -635,6 +641,8 @@
                     Foreground="White"
                     Text="4" />
                 <Slider
+                    
+                    Tag="Потягніть повзунок, щоб масштабувати фрактал."
                     Name="ScaleSlider"
                     Grid.Column="0"
                     Width="168"
@@ -680,6 +688,8 @@
                     FontSize="18"
                     Foreground="White" />
                 <ComboBox
+                    Style="{StaticResource Helpable}"
+                    Tag="Оберіть одну з 5 колірних моделей для фракталу."
                     Grid.Column="1"
                     Width="101"
                     Height="22"
@@ -695,6 +705,7 @@
                     <TextBlock>Black&amp;Red</TextBlock>
                 </ComboBox>
                 <Button
+                    Tag="Натисніть на кнопку, щоб зобразити фрактал з заданими параметрами. Зачекай деякий час."
                     Name="VisualizeButton"
                     Width="249"
                     FontSize="18"
@@ -731,6 +742,8 @@
             </Grid>
         </Border>
         <Image
+            Style="{StaticResource Helpable}"
+            Tag="Це ділянка для промальовки фракталу."
             Name="fractalImg"
             Grid.Row="1"
             Grid.RowSpan="2"
@@ -739,6 +752,8 @@
             Source="{Binding Path=Image}"
             Stretch="Fill" />
         <Image
+            Style="{StaticResource Helpable}"
+            Tag="Привіт! Я - єдиноріг Юні. Я допоможу тобі вивчити фрактали Ньютона! :)"
             Grid.Row="2"
             Width="118"
             Height="114"
@@ -765,6 +780,8 @@
                 TextWrapping="Wrap" />
         </Border>
         <TextBlock
+            Style="{StaticResource Helpable}"
+            Tag="Це загальна формула фракталу Ньютона!"
             Grid.Row="1"
             Grid.Column="0"
             Width="249"
