--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -420,7 +420,7 @@
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
-        <Style x:Key="SliderStyle1" TargetType="{x:Type Slider}">
+        <Style x:Key="SliderStyle1" TargetType="{x:Type Slider}" BasedOn="{StaticResource Helpable}">
             <Setter Property="Stylus.IsPressAndHoldEnabled" Value="false" />
             <Setter Property="Background" Value="Transparent" />
             <Setter Property="BorderBrush" Value="Transparent" />
@@ -496,12 +496,14 @@
                     <ColumnDefinition Width="175*"/>
                 </Grid.ColumnDefinitions>
                 <Button
+                    Tag="Натисніть, щоб повернутись в головне меню."
                     Name="BackButton"
                     Height="28"
                     Margin="11,10,54,0"
                     VerticalAlignment="Top"
                     BorderThickness="0"
-                    Background="#99A2F1"
+                    Style="{StaticResource BlueButtonStyle}"
+                    Click="BackButton_Click"
                     Grid.Column="0" >
                     <Image HorizontalAlignment="Left" Source="/UniGraphics;component/Resources/back.png" Stretch="Uniform" Height="28" Width="25"/>
                 </Button>
@@ -616,6 +618,8 @@
                     BorderThickness="0"
                     IsChecked="True" />
                 <TextBlock
+                    Style="{StaticResource Helpable}"
+                    Tag="Вкажіть степінь 3 або 4."
                     Grid.Column="0"
                     Margin="60,158,0,0"
                     HorizontalAlignment="Left"
@@ -624,6 +628,8 @@
                     Foreground="White"
                     Text="3" />
                 <RadioButton
+                    Style="{StaticResource Helpable}"
+                    Tag="Вкажіть степінь 3 або 4."
                     Name="FractalPower4Radio"
                     Grid.Column="0"
                     Width="12"
@@ -633,6 +639,8 @@
                     VerticalAlignment="Top"
                     BorderThickness="0" />
                 <TextBlock
+                    Style="{StaticResource Helpable}"
+                    Tag="Вкажіть степінь 3 або 4."
                     Grid.Column="1"
                     Margin="6,158,0,0"
                     HorizontalAlignment="Left"
@@ -641,7 +649,6 @@
                     Foreground="White"
                     Text="4" />
                 <Slider
-                    
                     Tag="Потягніть повзунок, щоб масштабувати фрактал."
                     Name="ScaleSlider"
                     Grid.Column="0"
@@ -716,7 +723,8 @@
                     Command="{Binding Visualize}"
                     Content="Візуалізувати"
                     Foreground="White"
-                    Style="{StaticResource BlueButtonStyle}" Grid.ColumnSpan="2" />
+                    Style="{StaticResource BlueButtonStyle}" 
+                    Grid.ColumnSpan="2" />
                 <Label
                     Grid.Column="0"
                     Width="191"
@@ -772,11 +780,12 @@
             Background="White"
             CornerRadius="15">
             <TextBlock
-                x:Name="UnicornHelper"
+                Name="UnicornHelper"
                 Padding="5"
-                FontSize="13"
                 Foreground="#4278cf"
+                FontSize="10"
                 TextAlignment="Center"
+                VerticalAlignment="Center"
                 TextWrapping="Wrap" />
         </Border>
         <TextBlock
