--- a/UniGraphics/MainPage.xaml
+++ b/UniGraphics/MainPage.xaml
@@ -7,15 +7,47 @@
       mc:Ignorable="d" 
       d:DesignHeight="640" d:DesignWidth="917"
       Title="MainPage">
+    <Page.Resources>
+        <Style x:Key="Helpable" TargetType="FrameworkElement">
+            <EventSetter Event="MouseEnter" Handler="HelpableHover"/>
+            <EventSetter Event="MouseLeave" Handler="HelpableMouseLeave"/>
+        </Style>
+        <Style x:Key="BlueButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource Helpable}">
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border>
+                            <Border.Style>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="Background" Value="#99A2F1" />
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="#8189cc" />
+                                        </Trigger>
+                                        <Trigger Property="IsEnabled" Value="False">
+                                            <Setter Property="Background" Value="#FFCED3FD" />
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Border.Style>
+                            <Grid Background="Transparent">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            </Grid>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="269*"/>
-            <ColumnDefinition Width="680*"/>
+            <ColumnDefinition Width="269"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="25" />
-            <RowDefinition Height="455" />
-            <RowDefinition MinHeight="120" />
+            <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
         <Menu
             Grid.ColumnSpan="2"
@@ -29,19 +61,7 @@
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
-                    Command="{Binding OpenFile}"
-                    Header="Відкрити" />
-                <MenuItem
-                    Padding="-20,0,0,0"
-                    Background="#F2F2F2"
-                    Foreground="#99A2F1"
-                    Command="{Binding SaveFile}"
-                    Header="Зберегти як..." />
-                <MenuItem
-                    Padding="-20,0,0,0"
-                    Background="#F2F2F2"
-                    Foreground="#99A2F1"
-                    Command="{Binding PerformExit}"
+                    Click="ExitClicked"
                     Header="Вийти" />
             </MenuItem>
             <MenuItem
@@ -52,17 +72,20 @@
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
-                    Header="Довідка" />
+                    Header="Довідка" 
+                    Click="HelpClicked"/>
                 <MenuItem
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
-                    Header="Навчальні матеріали" />
+                    Header="Навчальні матеріали" 
+                    Click="StudyMaterialsClicked"/>
                 <MenuItem
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
-                    Header="Про програму"/>
+                    Header="Про програму"
+                    Click="CreditsClicked"/>
             </MenuItem>
         </Menu>
         <Border
@@ -77,12 +100,7 @@
             Grid.Column="0"
             Background="#BCC3FF">
             <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="149*"/>
-                    <ColumnDefinition Width="111*"/>
-                </Grid.ColumnDefinitions>
                 <Label
-                    Grid.Column="0"
                     Width="186"
                     Height="49"
                     Margin="35,5,39,0"
@@ -93,83 +111,90 @@
                     FontSize="25"
                     Foreground="White" Grid.ColumnSpan="2" />
                 <Button
+                    Tag="Натисніть цю кнопку, щоб перейти на розділ 'Колірні моделі'."
                     Name="ColorModelsButton"
                     Height="40"
                     Margin="10,54,10,0"
-                    VerticalAlignment="Top"
-                    BorderThickness="0"
-                    Background="#99A2F1"
-                    Grid.Column="0" Grid.ColumnSpan="2" >
+                    Style="{StaticResource BlueButtonStyle}"
+                    Click="ColorModelsButton_Click"
+                    VerticalAlignment="Top">
                     <StackPanel Orientation="Horizontal">
-                        <Image HorizontalAlignment="Left" Source="/UniGraphics;component/Resources/Unicorn/logo.png" Stretch="Uniform" Height="28" Width="60"></Image>
+                        <Image HorizontalAlignment="Left" Source="/UniGraphics;component/Resources/colormodels.png" Stretch="Uniform" Height="28"></Image>
                         <TextBlock  
+                            TextAlignment="Center"
                             FontSize="18"
                             Text="Колірні моделі"
-                            Foreground="White" Width="154"
-                            ></TextBlock>
+                            Foreground="White" 
+                            Width="200"/>
                     </StackPanel>
                 </Button>
                 <Button
+                    Tag="Натисніть цю кнопку, щоб перейти на розділ 'Фрактали'."
                     x:Name="FractalsButton"
+                    Click="FractalsButton_Click"
                     Height="40"
                     Margin="10,113,10,0"
                     VerticalAlignment="Top"
-                    BorderThickness="0"
-                    Background="#99A2F1"
-                    Grid.Column="0" Grid.ColumnSpan="2" >
+                    Style="{StaticResource BlueButtonStyle}">
                     <StackPanel Orientation="Horizontal">
-                        <Image HorizontalAlignment="Left" Source="Resources/Unicorn/logo.png" Stretch="Uniform" Height="28" Width="57"/>
+                        <Image HorizontalAlignment="Left" Source="/UniGraphics;component/Resources/Fractal.png" Stretch="Uniform" Height="28"/>
                         <TextBlock  
                             FontSize="18"
                             Text="Фрактали"
                             HorizontalAlignment="Center"
-                            Foreground="White" Width="158"
-                            />
+                            TextAlignment="Center"
+                            Foreground="White" 
+                            Width="200"/>
                     </StackPanel>
                 </Button>
                 <Button
+                    Tag="Натисніть цю кнопку, щоб перейти на розділ 'Афінні перетворення'."
                     x:Name="AnimationButton"
+                    Click="AnimationButton_Click"
                     Height="40"
                     Margin="10,170,10,0"
                     VerticalAlignment="Top"
-                    BorderThickness="0"
-                    Background="#99A2F1"
-                    Grid.Column="0" Grid.ColumnSpan="2" >
+                    Style="{StaticResource BlueButtonStyle}">
                     <StackPanel Orientation="Horizontal">
-                        <Image HorizontalAlignment="Left" Source="Resources/Unicorn/logo.png" Stretch="Uniform" Height="28" Width="35"/>
+                        <Image HorizontalAlignment="Left" Source="/UniGraphics;component/Resources/Hexagon.jpg" Stretch="Uniform" Height="28"/>
                         <TextBlock  
                             FontSize="18"
                             Text="Афінні перетворення"
-                            Foreground="White" Width="180"
-                            />
+                            Foreground="White" 
+                            TextAlignment="Center"
+                            Width="200"/>
                     </StackPanel>
                 </Button>
-
+                <Border
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    Width="150"
+                    Height="86"
+                    Margin="10,0,0,10"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Bottom"
+                    Background="White"
+                    CornerRadius="15">
+                    <TextBlock
+                        Name="UnicornHelper"
+                        Padding="5"
+                        VerticalAlignment="Center"
+                        Foreground="#4278cf"
+                        FontSize="10"
+                        TextAlignment="Center"
+                        TextWrapping="Wrap" />
+                </Border>
+                <Image
+                    Style="{StaticResource Helpable}"
+                    Tag="Привіт! Я - єдиноріг Юні. Сьогодні я буду твоїм помічником! :)"
+                    Grid.Row="2"
+                    Width="118"
+                    Height="114"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Source="/UniGraphics;component/Resources/Unicorn/UnicornHat.png" 
+                    Margin="0,0,0,5" />
             </Grid>
-        </Border>
-        <Image
-            Grid.Row="2"
-            Width="118"
-            Height="114"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
-            Source="/UniGraphics;component/Resources/Unicorn/UnicornHat.png" Grid.ColumnSpan="2" Margin="0,0,651,10" />
-        <Border
-            Grid.Row="2"
-            Grid.Column="0"
-            Width="150"
-            Height="86"
-            Margin="10,0,0,16"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Bottom"
-            Background="White"
-            CornerRadius="15">
-            <TextBlock
-                Padding="5"
-                Foreground="#4278cf"
-                FontSize="14"
-                TextAlignment="Center"
-                TextWrapping="Wrap" ><Run Text="Вивчайте основи комп'ютерної графіки разом з UniGraphics! :)"/></TextBlock>
         </Border>
     </Grid>
 </Page>
