Drawn own start/pause buttons, fixed small bugs, added minimum sizes of windows, fixed tab-index problem. Added loading page logic. Added menu clickers in fractals section.

--- a/UniGraphics/CreditsWindow.xaml
+++ b/UniGraphics/CreditsWindow.xaml
@@ -6,7 +6,11 @@
         xmlns:local="clr-namespace:UniGraphics"
         mc:Ignorable="d"
         Icon="/UniGraphics;component/Resources/Unicorn/logo.png"
-        Title="Про програму" Height="550" Width="610">
+        Title="Про програму" 
+        Height="550"
+        Width="610"
+        MinHeight="400"
+        MinWidth="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="233" />
