--- a/UniGraphics/Help/FractalsHelp.xaml
+++ b/UniGraphics/Help/FractalsHelp.xaml
@@ -40,7 +40,7 @@
                         <Run Text="c: asd + $%*i;"/><LineBreak/>
                         <Run Text="c: &lt;&gt; + s45gh6i;"/><LineBreak/>
                         <Run Text="k - степінь у формулі. Оберіть одне з двох значень для степеня: 3 або 4."/><LineBreak/>
-                        <Run Text="Також для побудови фракталу потрібно задати масштабування та обрати одну з колірних моделей (читайте нижче). Після того як"/>
+                        <Run Text="Також для побудови фрактала потрібно задати масштабування та обрати одну з колірних моделей (читайте нижче). Після того як"/>
                         <Run Text="усі вхідні дані вказані - натисніть кнопку візуалізувати."/><LineBreak/>
                 </TextBlock>
 
@@ -50,9 +50,9 @@
                     TextWrapping="Wrap"
                     TextAlignment="Justify">
                     <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Масштабування"/><LineBreak/>
-                    <Run Text="Ви можете масштабувати зображення фракталу використовуючи"/>
+                    <Run Text="Ви можете масштабувати зображення фрактала використовуючи"/>
                     <Run Text="для цього повзунок. Масштабування автоматично відбувається"/>
-                    <Run Text="по центру. Рухаючи повзунок управо ви збільшуєте зображення фракталу"/>
+                    <Run Text="по центру. Рухаючи повзунок вправо ви збільшуєте зображення фрактала, "/>
                     <Run Text="вліво - зменшуєте. З правого боку у відсотках відображається заданий вами масштаб."/><LineBreak/>
                 </TextBlock>
 
@@ -62,7 +62,7 @@
                     TextWrapping="Wrap"
                     TextAlignment="Justify">
                     <Run FontStyle ="Italic" Foreground="#99A2F1"  FontWeight="Bold" Text="Колірна модель"/><LineBreak/>
-                    <Run Text="На вибір для візуалізації фракталу представлено 5 колірних моделей: "/><LineBreak/>
+                    <Run Text="На вибір для візуалізації фрактала представлено 5 колірних моделей: "/><LineBreak/>
                     <Run Text="Standart - виконана у червоних тонах;"/><LineBreak/>
                     <Run Text="Candy - суміш тонів переважно зеленого, рожевого та коричневого;"/>
                     <Run Text="Gold - виконана у коричневих, білих та жовтих тонах;"/><LineBreak/>
@@ -76,11 +76,11 @@
                     TextWrapping="Wrap"
                     TextAlignment="Justify" Height="294">
                     <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Можливі проблемні ситуації"/><LineBreak/>
-                    <Run Text="Розмір зображення фракталу змінюється відповідно до розміру вікна."/>
-                    <Run Text="Тому для отримання більш чіткого зображення фракталу задайте зручний вам розмір вікна."/><LineBreak/>
+                    <Run Text="Розмір зображення фрактала змінюється відповідно до розміру вікна."/>
+                    <Run Text="Тому для отримання більш чіткого зображення фрактала задайте зручний вам розмір вікна."/><LineBreak/>
                     <Run Text="Для візуалізації необхідно зачекати деякий час. Прогрес процесу промальовки "/>
                     <Run Text="ви можете бачити знизу біля кнопки 'Візуалізувати'. Для уникнення зависання програми бажано"/>
-                    <Run Text="зачекати поки не з'явиться зображення фракталу."/><LineBreak/>
+                    <Run Text="зачекати поки не з'явиться зображення фрактала."/><LineBreak/>
                 </TextBlock>
 <!--hnkdmcxbfjk-->
             </StackPanel>
