--- a/UniGraphics/StudyMaterials/FractalsStudy.xaml
+++ b/UniGraphics/StudyMaterials/FractalsStudy.xaml
@@ -28,7 +28,7 @@
                     Margin="10,0,0,10">
                         <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Загальні відомості"/><LineBreak/>
                         <Run Text="Фрактали Ньютона - різновид алгебраїчних фракталів."/>
-                        <Run Text="Візуалізація фракталу забезпечується наближеним знаходженням коренів нелінійного рівняння за допомогою алгоритму Ньютона на комплексній площині."/>
+                        <Run Text="Візуалізація фрактала забезпечується наближеним знаходженням коренів нелінійного рівняння за допомогою алгоритму Ньютона на комплексній площині."/>
                         <Run Text="Метод Ньютона також називають методом дотичних. Застосовується метод Ньютона для"/>
                         <Run Text="знаходження нуля функції комплексної змінної, використовуючи процедуру:  
                              z(n+1) = z(n) – f(z(n))/f'(z(n))."/>
