--- a/UniGraphics/HelpWindow.xaml
+++ b/UniGraphics/HelpWindow.xaml
@@ -6,7 +6,11 @@
         xmlns:local="clr-namespace:UniGraphics"
         mc:Ignorable="d"
         Icon="/UniGraphics;component/Resources/Unicorn/logo.png"
-        Title="Довідка" Height="450" Width="800">
+        Title="Довідка" 
+        MinWidth="600"
+        MinHeight="300"
+        Height="450" 
+        Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="224" />
