--- a/UniGraphics/LoadingPage.xaml
+++ b/UniGraphics/LoadingPage.xaml
@@ -5,80 +5,61 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:UniGraphics"
       mc:Ignorable="d" 
-      d:DesignHeight="640" d:DesignWidth="917"
+      d:DesignHeight="500" 
+      d:DesignWidth="900"
+      Background="#BCC3FF"
       Title="LoadingPage">
-
     <Grid>
-        <Border Background="#BCC3FF">
-            <Image
-            Width="271"
-            Height="274"
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="430"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="400"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Image
+            Width="256"
+            Height="256"
+            Grid.Row="1"
+            Grid.Column="1"
             HorizontalAlignment="Center"
-            VerticalAlignment="Bottom"
-            Source="/UniGraphics;component/Resources/Unicorn/logo.png" 
-            Margin="308,0,338,235" />
-        </Border>
+            VerticalAlignment="Top"
+            Source="/UniGraphics;component/Resources/Unicorn/logo.png"  />
+        <Border
+            Background="#BFA1FE"
+            Grid.Column="1" 
+            Grid.Row="1"
+            Height="40"
+            Margin="0,275,0,0"
+            VerticalAlignment="Top"/>
         <ProgressBar
-                    Width="279"
-                    Height="29"
-                    Margin="318,414,320,0"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
-                    Foreground="#BFA1FE"
-                    Maximum="1" />
-        <Label 
-            Foreground="#2d0a4c"
-            FontStyle="Italic"
-            FontSize="18"
-            Content="Підказка дня:" 
-            HorizontalAlignment="Left" 
-            Margin="318,443,0,0" 
-            VerticalAlignment="Top" 
-            Width="126"/>
-        <Label 
-            Foreground="#2d0a4c"
-            FontStyle="Italic"
-            FontSize="18"
-            Content="почни вчити колірні моделі!" 
-            HorizontalAlignment="Left" 
-            Margin="444,443,0,0" 
-            VerticalAlignment="Top" 
-            Width="321"/>
-        <Label 
-            Foreground="#2d0a4c"
-            FontStyle="Italic"
-            FontSize="18"
-            Content="почни вчити фрактали!" 
-            HorizontalAlignment="Left" 
-            Margin="444,477,0,0" 
+            Name="LoadProgress"
+            Height="30"
+            Margin="5,280,5,0"
             VerticalAlignment="Top"
-            Width="224"/>
-        <Label 
+            Background="#BFA1FE"
+            Foreground="#9D85D1"
+            BorderThickness="0"
+            Value="5"
+            Minimum="1"
+            Maximum="100" 
+            Grid.Column="1" 
+            Grid.Row="1" />
+        <TextBlock
+            FontWeight="DemiBold"
             Foreground="#2d0a4c"
-            FontStyle="Italic"
             FontSize="18"
-            Content="почни вчити афінні перетворення!" 
-            HorizontalAlignment="Left" 
-            Margin="444,511,0,0" 
             VerticalAlignment="Top"
-            Width="321"/>
-        <Label 
-            Foreground="#2d0a4c"
-            FontStyle="Italic"
-            FontSize="18"
-            Content="зверни увагу на матриці перетворень!" 
-            HorizontalAlignment="Left" 
-            Margin="444,550,0,0" 
-            VerticalAlignment="Top"
-            Width="348"/>
-        <Label 
-            Foreground="#2d0a4c"
-            FontStyle="Italic"
-            FontSize="18"
-            Content="зверни увагу на масштабування фракталів!" 
-            HorizontalAlignment="Left" 
-            Margin="444,584,0,0" 
-            VerticalAlignment="Top"
-            Width="387"/>
+            TextAlignment="Center"
+            Grid.Column="1"
+            Grid.Row="1"
+            TextWrapping="Wrap"
+            Margin="0,320,0,0">
+            <Run Text="Підказка дня: "/>
+            <Run Name="HintText"/>
+        </TextBlock>
     </Grid>
 </Page>
