--- a/UniGraphics/MainWindow.xaml
+++ b/UniGraphics/MainWindow.xaml
@@ -6,8 +6,12 @@
     xmlns:local="clr-namespace:UniGraphics"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="UniGraphics"
-    Width="917"
+    Width="900"
     Height="640"
+    MinWidth="700"
+    MinHeight="600"
+    Left="20"
+    Top="20"
     Icon="/UniGraphics;component/Resources/Unicorn/logo.png"
     SizeChanged="WindowSizeChanged"
     mc:Ignorable="d">
