--- a/UniGraphics/StudyWindow.xaml
+++ b/UniGraphics/StudyWindow.xaml
@@ -1,12 +1,17 @@
-﻿<Window x:Class="UniGraphics.StudyWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UniGraphics"
-        mc:Ignorable="d"
-        Icon="/UniGraphics;component/Resources/Unicorn/logo.png"
-        Title="Навчальні матеріали" Height="450" Width="800">
+﻿<Window 
+    x:Class="UniGraphics.StudyWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:UniGraphics"
+    mc:Ignorable="d"
+    Icon="/UniGraphics;component/Resources/Unicorn/logo.png"
+    Title="Навчальні матеріали" 
+    Height="450"
+    Width="800"
+    MinHeight="300"
+    MinWidth="600">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="224" />
