Changed fractals scale behaviour.

--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -662,11 +662,12 @@
                     VerticalAlignment="Top"
                     IsMoveToPointEnabled="True"
                     LargeChange="0.1"
-                    Maximum="5"
-                    Minimum="0.1"
+                    Maximum="1.0"
+                    Minimum="-1.0"
                     SmallChange="0.001"
                     Style="{DynamicResource SliderStyle1}"
-                    Value="{Binding Path=FractalScale}" Grid.ColumnSpan="2" />
+                    Value="{Binding Path=FractalScale}" 
+                    Grid.ColumnSpan="2" />
                 <Label
                     Grid.Column="0"
                     Width="88"
@@ -687,7 +688,8 @@
                     VerticalAlignment="Top"
                     Content="Колірна модель:"
                     FontSize="18"
-                    Foreground="White" Grid.ColumnSpan="2" />
+                    Foreground="White" 
+                    Grid.ColumnSpan="2" />
                 <Label
                     Grid.Column="1"
                     Width="81"
