--- a/UniGraphics/Help/FractalsHelp.xaml
+++ b/UniGraphics/Help/FractalsHelp.xaml
@@ -52,8 +52,8 @@
                     <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Масштабування"/><LineBreak/>
                     <Run Text="Ви можете масштабувати зображення фрактала використовуючи"/>
                     <Run Text="для цього повзунок. Масштабування автоматично відбувається"/>
-                    <Run Text="по центру. Рухаючи повзунок вправо ви збільшуєте зображення фрактала, "/>
-                    <Run Text="вліво - зменшуєте. З правого боку у відсотках відображається заданий вами масштаб."/><LineBreak/>
+                    <Run Text="по центру. Рухаючи повзунок вправо ви зближуєте фрактал, "/>
+                    <Run Text="вліво - віддаляєте. З правого боку у відсотках відображається заданий вами масштаб."/><LineBreak/>
                 </TextBlock>
 
                 <TextBlock
