Added errors for fractals input fields.

--- a/UniGraphics/Help/FractalsHelp.xaml
+++ b/UniGraphics/Help/FractalsHelp.xaml
@@ -32,7 +32,7 @@
                         <Run Text=" "/><Run Text="Протягом всього процесу "/>
                         <Run Text="побудови фрактала с є незмінним."/>
                         <Run Text="Заборонено вводити будь-які інші дані, крім безпосередньо чисел - "/>
-                        <Run Text="тобто символи, літери і т.д."/>
+                        <Run Text="тобто символи, літери і т.д. Дійсна та уявна частини мають бути в межах [-1000; 1000] кожна. "/>
                         <Run Text="Приклад допустимих данних:"/><LineBreak/>
                         <Run Text="с: 25 + 130i"/><LineBreak/>
                         <Run Text="c: 200 + 10i;"/><LineBreak/>
