Added images to buttons, cursor hand

--- a/UniGraphics/ColorModels/ColorModelsView.xaml
+++ b/UniGraphics/ColorModels/ColorModelsView.xaml
@@ -221,6 +221,7 @@
                     FontSize="16"
                     Foreground="White" />
                 <Button
+                    Cursor="Hand"
                     Style="{StaticResource BlueButtonStyle}"
                     Tag="Натисніть, щоб здійснити конвертацію між RGB та HSL"
                     Visibility="{Binding ConvertButtonVisibility}"
