--- a/UniGraphics/ErrorWindow.xaml
+++ b/UniGraphics/ErrorWindow.xaml
@@ -68,6 +68,7 @@
         <Button
             Name="OKButton"
             FontSize="14"
+            Cursor="Hand"
             Height="30"
             Margin="160,0,160,10"
             VerticalAlignment="Bottom"
